--- a/Ink/imageimport.ui
+++ b/Ink/imageimport.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>120</height>
+    <height>180</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -19,7 +19,7 @@
   <property name="maximumSize">
    <size>
     <width>480</width>
-    <height>120</height>
+    <height>180</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -33,16 +33,6 @@
      </property>
      <property name="text">
       <string>Import</string>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="2">
-    <widget class="QTextEdit" name="path">
-     <property name="maximumSize">
-      <size>
-       <width>100000</width>
-       <height>30</height>
-      </size>
      </property>
     </widget>
    </item>
@@ -60,6 +50,35 @@
     <widget class="QToolButton" name="toolButton">
      <property name="text">
       <string>...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="2">
+    <widget class="QTextEdit" name="path">
+     <property name="maximumSize">
+      <size>
+       <width>100000</width>
+       <height>30</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QLabel" name="errorLabel">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:red;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
