--- a/Ink/editor.ui
+++ b/Ink/editor.ui
@@ -146,8 +146,20 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuPreferences">
+    <property name="title">
+     <string>Preferences</string>
+    </property>
+    <addaction name="actionOptions"/>
+   </widget>
+   <addaction name="menuPreferences"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionOptions">
+   <property name="text">
+    <string>Options</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
