--- a/Ink/menu.ui
+++ b/Ink/menu.ui
@@ -41,7 +41,19 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuEditor">
+    <property name="title">
+     <string>Editor</string>
+    </property>
+    <addaction name="actionOptions"/>
+   </widget>
+   <addaction name="menuEditor"/>
   </widget>
+  <action name="actionOptions">
+   <property name="text">
+    <string>Options</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
