--- a/Ink/options.ui
+++ b/Ink/options.ui
@@ -243,6 +243,11 @@
               <string>bmp</string>
              </property>
             </item>
+            <item>
+             <property name="text">
+              <string>elk</string>
+             </property>
+            </item>
            </widget>
           </item>
           <item row="0" column="0">
