--- a/Ink/editor.ui
+++ b/Ink/editor.ui
@@ -238,6 +238,7 @@
     <addaction name="actionSave"/>
     <addaction name="menuSave_as"/>
     <addaction name="actionUndo"/>
+    <addaction name="actionRedo"/>
     <addaction name="actionChange_Size"/>
     <addaction name="menuChange_Color_Scheme"/>
     <addaction name="menuQuiplash"/>
@@ -343,6 +344,19 @@
   <action name="actionELK">
    <property name="text">
     <string>ELK</string>
+   </property>
+  </action>
+  <action name="actionUndo_2">
+   <property name="text">
+    <string>Undo</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="text">
+    <string>Redo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Y</string>
    </property>
   </action>
  </widget>
