--- a/Ink/menu.ui
+++ b/Ink/menu.ui
@@ -29,6 +29,11 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0">
+        <layout class="QGridLayout" name="recent_images_grid"/>
+       </item>
+      </layout>
      </widget>
     </item>
     <item row="0" column="0">
